Changed names of JsonTooltips annotations.
Renamed "@Optional" to "@Suggested" and "@TooltipIdentifier" to
"@TooltipCode" to be more in line with other annotations and to avoid
name collisions.